DRaiL/drail/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    GEQ
    SUMFORALL
    HEAD
    SCCLASS
    EQ
    ID
    LEQ

Grammar

Rule 0     S' -> model
Rule 1     model -> instructionlist
Rule 2     instructionlist -> instructionlist instruction ;
Rule 3     instructionlist -> instruction ;
Rule 4     instruction -> ENTITY : VARSTRING , ARGUMENTS : [ argumentdeflist ]
Rule 5     instruction -> PREDICATE : VARSTRING , ARGUMENTS : [ VARPRED , VARPRED ]
Rule 6     argumentdeflist -> argumentdeflist , argumentdef
Rule 7     argumentdeflist -> argumentdef
Rule 8     argumentdef -> VARSTRING : : type
Rule 9     type -> ARGSTRING
Rule 10    type -> ARGSTRINGID
Rule 11    type -> ARGINT
Rule 12    type -> ARGDOUBLE
Rule 13    type -> ARGID
Rule 14    instruction -> LABEL : VARSTRING , LBCLASSES : NUMBER , LBTYPE : labeltype
Rule 15    labeltype -> LBMULTILABEL
Rule 16    labeltype -> LBMULTICLASS
Rule 17    labeltype -> LBBINARY
Rule 18    instruction -> LOAD : VARSTRING , FILE : VARSTRING
Rule 19    instruction -> RULESET { rulelist } GROUPBY : GROUPARG
Rule 20    instruction -> DBMODULE : VARSTRING
Rule 21    instruction -> DBCLASS : VARSTRING
Rule 22    instruction -> FEMODULE : VARSTRING
Rule 23    instruction -> FECLASS : VARSTRING
Rule 24    instruction -> SCMODULE : VARSTRING
Rule 25    rulelist -> rulelist rule ;
Rule 26    rulelist -> rule ;
Rule 27    rule -> RULE : proposition filters lambda scoring featureconf dbconf splitconf target
Rule 28    lambda -> LAMBDA : FLOAT ,
Rule 29    lambda -> <empty>
Rule 30    splitconf -> SPLITCLASSIF : VARINSTANCE : : labeltype ,
Rule 31    splitconf -> <empty>
Rule 32    target -> TARGET : VARINSTANCE
Rule 33    filters -> CONDS : [ condlist ] ,
Rule 34    filters -> <empty>
Rule 35    condlist -> condlist , condition
Rule 36    condlist -> condition
Rule 37    condition -> VARINSTANCE . VARARG = VARSTRING
Rule 38    condition -> VARINSTANCE . VARARG = NUMBER
Rule 39    condition -> VARINSTANCE . VARARG = FLOAT
Rule 40    featureconf -> FEFUNC : [ featurelist ] ,
Rule 41    dbconf -> DBFUNC : VARSTRING ,
Rule 42    dbconf -> DBFUNC : VARSTRING
Rule 43    dbconf -> <empty>
Rule 44    scoring -> NETWORK : VARSTRING ,
Rule 45    scoring -> SCORE : RULESET . NUMBER ,
Rule 46    scoring -> SCORE : VARSTRING ,
Rule 47    featurelist -> featurelist , featurefunc
Rule 48    featurelist -> featurefunc
Rule 49    featurefunc -> EMBEDDING ( VARSTRING , VARSTRING , VARSTRING , VARSTRING , VARSTRING )
Rule 50    featurefunc -> VECTOR ( VARSTRING )
Rule 51    featurefunc -> INPUT ( VARSTRING )
Rule 52    rule -> HARDCONSTRAINT : proposition filters dbconf
Rule 53    proposition -> conjunction IMPL instance ,
Rule 54    proposition -> conjunction IMPL instance
Rule 55    conjunction -> conjunction & instance
Rule 56    conjunction -> instance
Rule 57    instance -> VARPRED ( argumentlist )
Rule 58    instance -> ~ VARPRED ( argumentlist )
Rule 59    instance -> VARPRED ( argumentlist ) ^ ?
Rule 60    instance -> ~ VARPRED ( argumentlist ) ^ ?
Rule 61    instance -> VARPRED ( argumentlist ) *
Rule 62    instance -> ~ VARPRED ( argumentlist ) *
Rule 63    instance -> VARPRED ( argumentlist ) ^ ? *
Rule 64    instance -> ~ VARPRED ( argumentlist ) ^ ? *
Rule 65    argumentlist -> argumentlist , argument
Rule 66    argumentlist -> argument
Rule 67    argument -> VARINSTANCE
Rule 68    argument -> VARSTRING
Rule 69    argument -> VARINSTANCE ^ VARPRED ?
Rule 70    argument -> VARSTRING ^ VARPRED ?

Terminals, with rules where they appear

&                    : 55
(                    : 49 50 51 57 58 59 60 61 62 63 64
)                    : 49 50 51 57 58 59 60 61 62 63 64
*                    : 61 62 63 64
,                    : 4 5 5 6 14 14 18 28 30 33 35 40 41 44 45 46 47 49 49 49 49 53 65
.                    : 37 38 39 45
:                    : 4 4 5 5 8 8 14 14 14 18 18 19 20 21 22 23 24 27 28 30 30 30 32 33 40 41 42 44 45 46 52
;                    : 2 3 25 26
=                    : 37 38 39
?                    : 59 60 63 64 69 70
ARGDOUBLE            : 12
ARGID                : 13
ARGINT               : 11
ARGSTRING            : 9
ARGSTRINGID          : 10
ARGUMENTS            : 4 5
COMMENT              : 
CONDS                : 33
DBCLASS              : 21
DBFUNC               : 41 42
DBMODULE             : 20
EMBEDDING            : 49
ENTITY               : 4
EQ                   : 
FECLASS              : 23
FEFUNC               : 40
FEMODULE             : 22
FILE                 : 18
FLOAT                : 28 39
GEQ                  : 
GROUPARG             : 19
GROUPBY              : 19
HARDCONSTRAINT       : 52
HEAD                 : 
ID                   : 
IMPL                 : 53 54
INPUT                : 51
LABEL                : 14
LAMBDA               : 28
LBBINARY             : 17
LBCLASSES            : 14
LBMULTICLASS         : 16
LBMULTILABEL         : 15
LBTYPE               : 14
LEQ                  : 
LOAD                 : 18
NETWORK              : 44
NUMBER               : 14 38 45
PREDICATE            : 5
RULE                 : 27
RULESET              : 19 45
SCCLASS              : 
SCMODULE             : 24
SCORE                : 45 46
SPLITCLASSIF         : 30
SUMFORALL            : 
TARGET               : 32
VARARG               : 37 38 39
VARINSTANCE          : 30 32 37 38 39 67 69
VARPRED              : 5 5 57 58 59 60 61 62 63 64 69 70
VARSTRING            : 4 5 8 14 18 18 20 21 22 23 24 37 41 42 44 46 49 49 49 49 49 50 51 68 70
VECTOR               : 50
[                    : 4 5 33 40
]                    : 4 5 33 40
^                    : 59 60 63 64 69 70
error                : 
{                    : 19
}                    : 19
~                    : 58 60 62 64

Nonterminals, with rules where they appear

argument             : 65 66
argumentdef          : 6 7
argumentdeflist      : 4 6
argumentlist         : 57 58 59 60 61 62 63 64 65
condition            : 35 36
condlist             : 33 35
conjunction          : 53 54 55
dbconf               : 27 52
featureconf          : 27
featurefunc          : 47 48
featurelist          : 40 47
filters              : 27 52
instance             : 53 54 55 56
instruction          : 2 3
instructionlist      : 1 2
labeltype            : 14 30
lambda               : 27
model                : 0
proposition          : 27 52
rule                 : 25 26
rulelist             : 19 25
scoring              : 27
splitconf            : 27
target               : 27
type                 : 8

Parsing method: LALR

state 0

    (0) S' -> . model
    (1) model -> . instructionlist
    (2) instructionlist -> . instructionlist instruction ;
    (3) instructionlist -> . instruction ;
    (4) instruction -> . ENTITY : VARSTRING , ARGUMENTS : [ argumentdeflist ]
    (5) instruction -> . PREDICATE : VARSTRING , ARGUMENTS : [ VARPRED , VARPRED ]
    (14) instruction -> . LABEL : VARSTRING , LBCLASSES : NUMBER , LBTYPE : labeltype
    (18) instruction -> . LOAD : VARSTRING , FILE : VARSTRING
    (19) instruction -> . RULESET { rulelist } GROUPBY : GROUPARG
    (20) instruction -> . DBMODULE : VARSTRING
    (21) instruction -> . DBCLASS : VARSTRING
    (22) instruction -> . FEMODULE : VARSTRING
    (23) instruction -> . FECLASS : VARSTRING
    (24) instruction -> . SCMODULE : VARSTRING

    ENTITY          shift and go to state 8
    PREDICATE       shift and go to state 9
    LABEL           shift and go to state 1
    LOAD            shift and go to state 5
    RULESET         shift and go to state 7
    DBMODULE        shift and go to state 10
    DBCLASS         shift and go to state 4
    FEMODULE        shift and go to state 3
    FECLASS         shift and go to state 2
    SCMODULE        shift and go to state 12

    instructionlist                shift and go to state 6
    instruction                    shift and go to state 11
    model                          shift and go to state 13

state 1

    (14) instruction -> LABEL . : VARSTRING , LBCLASSES : NUMBER , LBTYPE : labeltype

    :               shift and go to state 14


state 2

    (23) instruction -> FECLASS . : VARSTRING

    :               shift and go to state 15


state 3

    (22) instruction -> FEMODULE . : VARSTRING

    :               shift and go to state 16


state 4

    (21) instruction -> DBCLASS . : VARSTRING

    :               shift and go to state 17


state 5

    (18) instruction -> LOAD . : VARSTRING , FILE : VARSTRING

    :               shift and go to state 18


state 6

    (1) model -> instructionlist .
    (2) instructionlist -> instructionlist . instruction ;
    (4) instruction -> . ENTITY : VARSTRING , ARGUMENTS : [ argumentdeflist ]
    (5) instruction -> . PREDICATE : VARSTRING , ARGUMENTS : [ VARPRED , VARPRED ]
    (14) instruction -> . LABEL : VARSTRING , LBCLASSES : NUMBER , LBTYPE : labeltype
    (18) instruction -> . LOAD : VARSTRING , FILE : VARSTRING
    (19) instruction -> . RULESET { rulelist } GROUPBY : GROUPARG
    (20) instruction -> . DBMODULE : VARSTRING
    (21) instruction -> . DBCLASS : VARSTRING
    (22) instruction -> . FEMODULE : VARSTRING
    (23) instruction -> . FECLASS : VARSTRING
    (24) instruction -> . SCMODULE : VARSTRING

    $end            reduce using rule 1 (model -> instructionlist .)
    ENTITY          shift and go to state 8
    PREDICATE       shift and go to state 9
    LABEL           shift and go to state 1
    LOAD            shift and go to state 5
    RULESET         shift and go to state 7
    DBMODULE        shift and go to state 10
    DBCLASS         shift and go to state 4
    FEMODULE        shift and go to state 3
    FECLASS         shift and go to state 2
    SCMODULE        shift and go to state 12

    instruction                    shift and go to state 19

state 7

    (19) instruction -> RULESET . { rulelist } GROUPBY : GROUPARG

    {               shift and go to state 20


state 8

    (4) instruction -> ENTITY . : VARSTRING , ARGUMENTS : [ argumentdeflist ]

    :               shift and go to state 21


state 9

    (5) instruction -> PREDICATE . : VARSTRING , ARGUMENTS : [ VARPRED , VARPRED ]

    :               shift and go to state 22


state 10

    (20) instruction -> DBMODULE . : VARSTRING

    :               shift and go to state 23


state 11

    (3) instructionlist -> instruction . ;

    ;               shift and go to state 24


state 12

    (24) instruction -> SCMODULE . : VARSTRING

    :               shift and go to state 25


state 13

    (0) S' -> model .



state 14

    (14) instruction -> LABEL : . VARSTRING , LBCLASSES : NUMBER , LBTYPE : labeltype

    VARSTRING       shift and go to state 26


state 15

    (23) instruction -> FECLASS : . VARSTRING

    VARSTRING       shift and go to state 27


state 16

    (22) instruction -> FEMODULE : . VARSTRING

    VARSTRING       shift and go to state 28


state 17

    (21) instruction -> DBCLASS : . VARSTRING

    VARSTRING       shift and go to state 29


state 18

    (18) instruction -> LOAD : . VARSTRING , FILE : VARSTRING

    VARSTRING       shift and go to state 30


state 19

    (2) instructionlist -> instructionlist instruction . ;

    ;               shift and go to state 31


state 20

    (19) instruction -> RULESET { . rulelist } GROUPBY : GROUPARG
    (25) rulelist -> . rulelist rule ;
    (26) rulelist -> . rule ;
    (27) rule -> . RULE : proposition filters lambda scoring featureconf dbconf splitconf target
    (52) rule -> . HARDCONSTRAINT : proposition filters dbconf

    RULE            shift and go to state 32
    HARDCONSTRAINT  shift and go to state 33

    rulelist                       shift and go to state 35
    rule                           shift and go to state 34

state 21

    (4) instruction -> ENTITY : . VARSTRING , ARGUMENTS : [ argumentdeflist ]

    VARSTRING       shift and go to state 36


state 22

    (5) instruction -> PREDICATE : . VARSTRING , ARGUMENTS : [ VARPRED , VARPRED ]

    VARSTRING       shift and go to state 37


state 23

    (20) instruction -> DBMODULE : . VARSTRING

    VARSTRING       shift and go to state 38


state 24

    (3) instructionlist -> instruction ; .

    ENTITY          reduce using rule 3 (instructionlist -> instruction ; .)
    PREDICATE       reduce using rule 3 (instructionlist -> instruction ; .)
    LABEL           reduce using rule 3 (instructionlist -> instruction ; .)
    LOAD            reduce using rule 3 (instructionlist -> instruction ; .)
    RULESET         reduce using rule 3 (instructionlist -> instruction ; .)
    DBMODULE        reduce using rule 3 (instructionlist -> instruction ; .)
    DBCLASS         reduce using rule 3 (instructionlist -> instruction ; .)
    FEMODULE        reduce using rule 3 (instructionlist -> instruction ; .)
    FECLASS         reduce using rule 3 (instructionlist -> instruction ; .)
    SCMODULE        reduce using rule 3 (instructionlist -> instruction ; .)
    $end            reduce using rule 3 (instructionlist -> instruction ; .)


state 25

    (24) instruction -> SCMODULE : . VARSTRING

    VARSTRING       shift and go to state 39


state 26

    (14) instruction -> LABEL : VARSTRING . , LBCLASSES : NUMBER , LBTYPE : labeltype

    ,               shift and go to state 40


state 27

    (23) instruction -> FECLASS : VARSTRING .

    ;               reduce using rule 23 (instruction -> FECLASS : VARSTRING .)


state 28

    (22) instruction -> FEMODULE : VARSTRING .

    ;               reduce using rule 22 (instruction -> FEMODULE : VARSTRING .)


state 29

    (21) instruction -> DBCLASS : VARSTRING .

    ;               reduce using rule 21 (instruction -> DBCLASS : VARSTRING .)


state 30

    (18) instruction -> LOAD : VARSTRING . , FILE : VARSTRING

    ,               shift and go to state 41


state 31

    (2) instructionlist -> instructionlist instruction ; .

    ENTITY          reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    PREDICATE       reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    LABEL           reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    LOAD            reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    RULESET         reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    DBMODULE        reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    DBCLASS         reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    FEMODULE        reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    FECLASS         reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    SCMODULE        reduce using rule 2 (instructionlist -> instructionlist instruction ; .)
    $end            reduce using rule 2 (instructionlist -> instructionlist instruction ; .)


state 32

    (27) rule -> RULE . : proposition filters lambda scoring featureconf dbconf splitconf target

    :               shift and go to state 42


state 33

    (52) rule -> HARDCONSTRAINT . : proposition filters dbconf

    :               shift and go to state 43


state 34

    (26) rulelist -> rule . ;

    ;               shift and go to state 44


state 35

    (19) instruction -> RULESET { rulelist . } GROUPBY : GROUPARG
    (25) rulelist -> rulelist . rule ;
    (27) rule -> . RULE : proposition filters lambda scoring featureconf dbconf splitconf target
    (52) rule -> . HARDCONSTRAINT : proposition filters dbconf

    }               shift and go to state 46
    RULE            shift and go to state 32
    HARDCONSTRAINT  shift and go to state 33

    rule                           shift and go to state 45

state 36

    (4) instruction -> ENTITY : VARSTRING . , ARGUMENTS : [ argumentdeflist ]

    ,               shift and go to state 47


state 37

    (5) instruction -> PREDICATE : VARSTRING . , ARGUMENTS : [ VARPRED , VARPRED ]

    ,               shift and go to state 48


state 38

    (20) instruction -> DBMODULE : VARSTRING .

    ;               reduce using rule 20 (instruction -> DBMODULE : VARSTRING .)


state 39

    (24) instruction -> SCMODULE : VARSTRING .

    ;               reduce using rule 24 (instruction -> SCMODULE : VARSTRING .)


state 40

    (14) instruction -> LABEL : VARSTRING , . LBCLASSES : NUMBER , LBTYPE : labeltype

    LBCLASSES       shift and go to state 49


state 41

    (18) instruction -> LOAD : VARSTRING , . FILE : VARSTRING

    FILE            shift and go to state 50


state 42

    (27) rule -> RULE : . proposition filters lambda scoring featureconf dbconf splitconf target
    (53) proposition -> . conjunction IMPL instance ,
    (54) proposition -> . conjunction IMPL instance
    (55) conjunction -> . conjunction & instance
    (56) conjunction -> . instance
    (57) instance -> . VARPRED ( argumentlist )
    (58) instance -> . ~ VARPRED ( argumentlist )
    (59) instance -> . VARPRED ( argumentlist ) ^ ?
    (60) instance -> . ~ VARPRED ( argumentlist ) ^ ?
    (61) instance -> . VARPRED ( argumentlist ) *
    (62) instance -> . ~ VARPRED ( argumentlist ) *
    (63) instance -> . VARPRED ( argumentlist ) ^ ? *
    (64) instance -> . ~ VARPRED ( argumentlist ) ^ ? *

    VARPRED         shift and go to state 54
    ~               shift and go to state 55

    conjunction                    shift and go to state 53
    instance                       shift and go to state 52
    proposition                    shift and go to state 51

state 43

    (52) rule -> HARDCONSTRAINT : . proposition filters dbconf
    (53) proposition -> . conjunction IMPL instance ,
    (54) proposition -> . conjunction IMPL instance
    (55) conjunction -> . conjunction & instance
    (56) conjunction -> . instance
    (57) instance -> . VARPRED ( argumentlist )
    (58) instance -> . ~ VARPRED ( argumentlist )
    (59) instance -> . VARPRED ( argumentlist ) ^ ?
    (60) instance -> . ~ VARPRED ( argumentlist ) ^ ?
    (61) instance -> . VARPRED ( argumentlist ) *
    (62) instance -> . ~ VARPRED ( argumentlist ) *
    (63) instance -> . VARPRED ( argumentlist ) ^ ? *
    (64) instance -> . ~ VARPRED ( argumentlist ) ^ ? *

    VARPRED         shift and go to state 54
    ~               shift and go to state 55

    instance                       shift and go to state 52
    proposition                    shift and go to state 56
    conjunction                    shift and go to state 53

state 44

    (26) rulelist -> rule ; .

    }               reduce using rule 26 (rulelist -> rule ; .)
    RULE            reduce using rule 26 (rulelist -> rule ; .)
    HARDCONSTRAINT  reduce using rule 26 (rulelist -> rule ; .)


state 45

    (25) rulelist -> rulelist rule . ;

    ;               shift and go to state 57


state 46

    (19) instruction -> RULESET { rulelist } . GROUPBY : GROUPARG

    GROUPBY         shift and go to state 58


state 47

    (4) instruction -> ENTITY : VARSTRING , . ARGUMENTS : [ argumentdeflist ]

    ARGUMENTS       shift and go to state 59


state 48

    (5) instruction -> PREDICATE : VARSTRING , . ARGUMENTS : [ VARPRED , VARPRED ]

    ARGUMENTS       shift and go to state 60


state 49

    (14) instruction -> LABEL : VARSTRING , LBCLASSES . : NUMBER , LBTYPE : labeltype

    :               shift and go to state 61


state 50

    (18) instruction -> LOAD : VARSTRING , FILE . : VARSTRING

    :               shift and go to state 62


state 51

    (27) rule -> RULE : proposition . filters lambda scoring featureconf dbconf splitconf target
    (33) filters -> . CONDS : [ condlist ] ,
    (34) filters -> .

    CONDS           shift and go to state 63
    LAMBDA          reduce using rule 34 (filters -> .)
    NETWORK         reduce using rule 34 (filters -> .)
    SCORE           reduce using rule 34 (filters -> .)

    filters                        shift and go to state 64

state 52

    (56) conjunction -> instance .

    IMPL            reduce using rule 56 (conjunction -> instance .)
    &               reduce using rule 56 (conjunction -> instance .)


state 53

    (53) proposition -> conjunction . IMPL instance ,
    (54) proposition -> conjunction . IMPL instance
    (55) conjunction -> conjunction . & instance

    IMPL            shift and go to state 65
    &               shift and go to state 66


state 54
